# f-lite

./: .gitignore  FINE-TUNING.md  LICENSE  NEGATIVE_PROMPT.md  README.md  __init__.py  f_lite_gradio_gui.py  fsdp2_config.yaml  fsdp_config.yaml  generate_requirements.py  prompts.txt  pyproject.toml  requirements.txt
f_lite/: checkpoint.py  comfyui.py  data.py  distributed.py  f_lite_to_hf.py  generate.py  model.py  model_v2.py  pipeline.py  precompute_embeddings.py  precomputed_utils.py  pt.py  sampler.py  train.py  utils.py
scripts/: slurm_pretrain.sbatch
workflows/: F-lite-simple.json  F-lite-superprompt.json
